Update next and no-frills-ui

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "next": "16.0.7",
-    "no-frills-ui": "file:.yalc/no-frills-ui",
+    "next": "^16.0.7",
+    "no-frills-ui": "^0.0.14-rc.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
