--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@emotion/styled": "^11.14.1",
     "formik": "^2.4.9",
     "next": "^16.0.7",
-    "no-frills-ui": "file:.yalc/no-frills-ui",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "yup": "^1.7.1"
@@ -37,6 +36,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "no-frills-ui": "^0.0.14-rc.3",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.50.0"
