--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "no-frills-ui": "^0.0.14-rc.3",
+    "no-frills-ui": "file:.yalc/no-frills-ui",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.50.0"
