--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-window": "^2.2.3",
     "yup": "^1.7.1"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^10.1.8",
@@ -36,7 +38,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "no-frills-ui": "^0.0.14-rc.4",
+    "no-frills-ui": "0.0.14-rc.5",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.50.0"
