--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "no-frills-ui": "0.0.14-rc.5",
+    "no-frills-ui": "^0.0.14-rc.6",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.50.0"
